# snm-array-supporting-info

./: .gitignore  LICENSE.txt  README.md  cells.py  environment.yml  figure1.py  figure2.py  figure3.py  figure4.py  pyproject.toml  run_all_scripts.py  sup_figure1.py  sup_figure2.py  sup_figure3.py  sup_figure4.py
analysis/: calculations.py  cell_utils.py  circuit_utils.py  constants.py  data_processing.py  file_utils.py  plotting.py  utils.py
data/figure1/: 00_SPG806_20241114_nMem_parameter_sweep_D6_A4_B4_2024-11-14 11-47-10.mat  01_SPG806_20241114_nMem_parameter_sweep_D6_A4_B4_2024-11-14 12-01-12.mat  02_SPG806_20241114_nMem_parameter_sweep_D6_A4_B4_2024-11-14 12-13-23.mat  03_SPG806_20241114_nMem_parameter_sweep_D6_A4_B4_2024-11-14 12-27-15.mat  04_SPG806_20241119_nMem_parameter_sweep_D6_A4_B4_2024-11-19 10-14-54.mat  data.txt
data/figure2/data_290uA/: 00_SPG806_20240930_nMem_parameter_sweep_D6_A4_C1_2024-09-30 15-45-11.mat  01_SPG806_20240930_nMem_parameter_sweep_D6_A4_C1_2024-09-30 15-53-18.mat  data.txt  (+9 more)
data/sup_figure1/: A1_total_switches_norm.mat  A2_total_switches_norm.mat  A3_total_switches_norm.mat  A4_total_switches_norm.mat  B1_total_switches_norm.mat  B2_total_switches_norm.mat  B3_total_switches_norm.mat  B4_total_switches_norm.mat  C1_total_switches_norm.mat  C2_total_switches_norm.mat  C3_total_switches_norm.mat  C4_total_switches_norm.mat  D1_total_switches_norm.mat  D2_total_switches_norm.mat  D3_total_switches_norm.mat  D4_total_switches_norm.mat  data.txt
plotting/: arrays.py  helpers.py  style.py  sweeps.py  transients.py
(+62 files in other folders)
